--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-6 col-md-8 col-lg-offset-2">
+					<div class="col-lg-4 col-md-6 col-lg-offset-2">
 						<!-- Download Button -->
 						<a class="download-button  " href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG"
 							target="_blank">
-							<img src="assets/img/common/logo/whatsapp.png" class="download-button__icon"
+							<img src="assets/img/common/logo/WHATSAPP.png" class="download-button__icon"
 								alt="Platform Icon">
 							<span class="download-button__platform"
 								style="padding-top:12px;text-align:center;">WhatsApp</span>
@@ -256,11 +256,11 @@
 						</a>
 						<!-- End of Download Button -->
 					</div>
-					<div class="col-lg-6 col-md-8 col-lg-offset-1">
+					<div class="col-lg-4 col-md-6 col-lg-offset-1">
 						<!-- Download Button -->
 						<a class="download-button  "
 							href="https://instagram.com/shayar_the_community?utm_medium=copy_link" target="_blank">
-							<img src="assets/img/common/logo/insta.png" class="download-button__icon"
+							<img src="assets/img/common/logo/INSTA.png" class="download-button__icon"
 								alt="Platform Icon">
 							<span class="download-button__platform"
 								style="padding-top:12px;text-align:center;">Instagram</span>
@@ -268,10 +268,22 @@
 						</a>
 						<!-- End of Download Button -->
 					</div>
-					<div class="col-lg-6 col-md-8 col-lg-offset-1">
+					<div class="col-lg-4 col-md-6 col-lg-offset-1">
 						<!-- Download Button -->
 						<a class="download-button  " href="https://t.me/bestshayarihindi" target="_blank">
-							<img src="assets/img/common/logo/telegram.jpg" class="download-button__icon"
+							<img src="assets/img/common/logo/TELEGRAM.png" class="download-button__icon"
+								alt="Platform Icon">
+							<span class="download-button__platform"
+								style="padding-top:12px;text-align:center;">Telegram</span>
+							<!-- <span class="download-button__store">App Store</span> -->
+						</a>
+						<!-- End of Download Button -->
+					</div>
+					<div class="col-lg-4 col-md-6 col-lg-offset-1">
+						<!-- Download Button -->
+						<a class="download-button  "
+							href="https://play.google.com/store/apps/details?id=com.shayarindia.shayar" target="_blank">
+							<img src="assets/img/common/logo/PLAYSTORE.png" class="download-button__icon"
 								alt="Platform Icon">
 							<span class="download-button__platform"
 								style="padding-top:12px;text-align:center;">Telegram</span>
@@ -320,28 +332,29 @@
 							<li class="list__item">
 								<!-- Box -->
 								<div class="box  ">
-									<img src="assets/img/common/logo/playstore.webp" class="box__icon" alt="Box icon">
+									<img src="assets/img/common/logo/PLAYSTORE.png" class="box__icon" alt="Box icon">
 								</div>
 								<!-- End of Box -->
 							</li>
 							<li class="list__item">
 								<!-- Box -->
 								<div class="box  ">
-									<img src="assets/img/common/logo/whatsapp.png" class="box__icon" alt="Box icon">
+									<img src="assets/img/common/logo/WHATSAPP.png" class="box__icon" alt="Box icon">
 								</div>
 								<!-- End of Box -->
 							</li>
 							<li class="list__item">
 								<!-- Box -->
 								<div class="box  ">
-									<img src="assets/img/common/logo/insta.png" class="box__icon" alt="Box icon">
+									<img src="assets/img/common/logo/INSTA.png" class="box__icon" alt="Box icon">
 								</div>
 								<!-- End of Box -->
 							</li>
 						</ul>
 						<!-- End of List -->
 					</div>
-					<div class="col-lg-12 col-md-11 col-md-offset-1 col-lg-offset-0"><br><br><br><br><br><br><br><br><br><br>
+					<div class="col-lg-12 col-md-11 col-md-offset-1 col-lg-offset-0">
+						<br><br><br><br><br><br><br><br><br><br>
 						<!-- Screens Preview -->
 						<div class="screens-preview screens-preview--right  ">
 							<img src="assets/img/common/backgrounds/HOME VIDEO.png" class="screens-preview__primary"
@@ -353,7 +366,8 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-13 col-md-13"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+					<div class="col-lg-13 col-md-13">
+						<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 						<!-- Screens Preview -->
 						<div class="screens-preview  ">
 							<img src="assets/img/common/backgrounds/HOME VIDEO.png" class="screens-preview__primary"
@@ -775,8 +789,7 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/download.jfif" class="member__photo"
-									alt="Member Photo">
+								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">कहने में तो मेरा दिल “एक” है… लेकिन जिसको दिल दिया
 										है “वह हजारों में एक है”…!
@@ -809,7 +822,7 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/p1.jfif" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">Khuda tere sare gamo ko teri khushi kar de...Har
 										subah teri duniya me roshni bhar de..Jab bhi tootne lage teri saanse,Khuda
@@ -842,8 +855,7 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/download.jfif" class="member__photo"
-									alt="Member Photo">
+								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">हमे रंग उसी का चढ़ा है अब तक, जिसने रंग नहीं लगाया
 										अभी तक।💞
@@ -876,7 +888,7 @@
 						<!-- Member -->
 						<div class="member  ">
 							<div class="member__photo-wrapper">
-								<img src="assets/img/common/person/p1.jfif" class="member__photo" alt="Member Photo">
+								<img src="assets/img/common/person/p5.jpg" class="member__photo" alt="Member Photo">
 								<div class="member__cover">
 									<blockquote class="member__quote">Ek Nafrat hi hai jisey,Duniya chand Lamho mein
 										jaan Leti hai….Warna, Chahat ka yakin..Dilane mein to Zindagi Beet jaati hai…
@@ -1248,8 +1260,7 @@
 						</h2>
 						<!-- End of Section Title -->
 						<!-- Section Subtitle -->
-						<p class="section-subtitle section-subtitle--center "> Lorem ipsum dolor sit amet, eos fierent
-							pertinacia eu est elit tincidunt sadipscing te </p>
+						<p class="section-subtitle section-subtitle--center ">Have a look at our product!</p>
 						<!-- End of Section Subtitle -->
 					</div>
 				</div>
@@ -1259,47 +1270,59 @@
 				<div class="carousel__outer">
 					<div class="carousel__inner js-carousel owl-carousel">
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
-							<h3 class="carousel__title">Edit screen</h3>
+							<img src="assets/img/common/screenshots/EDIT PROFILE.png" class="carousel__image"
+								alt="Carousel Slide Image">
+							<h3 class="carousel__title"> Easy Login
+							</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
-							<h3 class="carousel__title">Tasks</h3>
+							<img src="assets/img/common/screenshots/LOGIN.png" class="carousel__image"
+								alt="Carousel Slide Image">
+							<h3 class="carousel__title">Change your look</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
-							<h3 class="carousel__title">Achievements</h3>
+							<img src="assets/img/common/screenshots/PHOTO POST.png" class="carousel__image"
+								alt="Carousel Slide Image">
+							<h3 class="carousel__title">Share with your loved ones </h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
-							<h3 class="carousel__title">Search</h3>
+							<img src="assets/img/common/screenshots/SHARE.png" class="carousel__image"
+								alt="Carousel Slide Image">
+							<h3 class="carousel__title">All your Shayari’s at one place</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
-							<h3 class="carousel__title">Card overlay</h3>
+							<img src="assets/img/common/screenshots/USER PROFILE.png" class="carousel__image"
+								alt="Carousel Slide Image">
+							<h3 class="carousel__title">Beautify your writing</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
+							<img src="assets/img/common/screenshots/EDIT PROFILE.png" class="carousel__image"
+								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Player</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
+							<img src="assets/img/common/screenshots/LOGIN.png" class="carousel__image"
+								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Dashboard</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
+							<img src="assets/img/common/screenshots/PHOTO POST.png" class="carousel__image"
+								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Shop</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
+							<img src="assets/img/common/screenshots/SHARE.png" class="carousel__image"
+								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Camera</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
+							<img src="assets/img/common/screenshots/LOGIN.png" class="carousel__image"
+								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Stats</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="http://placehold.it/432x768" class="carousel__image" alt="Carousel Slide Image">
+							<img src="assets/img/common/screenshots/USER PROFILE.png" class="carousel__image"
+								alt="Carousel Slide Image">
 							<h3 class="carousel__title">New article</h3>
 						</div>
 					</div>
@@ -1765,8 +1788,8 @@
 						<!-- Section Title 
 						<h2 class="section-title section-title--center "> Join Shayar 
 
-							<!-- <span class='section-title__highlight'>awesome</span> app -->
-		</h2>
+							<!-- <span class='section-title__highlight'>awesome</span> app 
+		</h2> -->
 		<!-- End of Section Title 
 						<!-- Section Subtitle 
 						<p class="section-subtitle section-subtitle--center "> Be A Part Of Shayar Community
@@ -1781,8 +1804,8 @@
 						<a class="download-button  " href="https://chat.whatsapp.com/LbDIKv5k8IY2xPx5Zh1UzG" target="_blank">
 							<img src="assets/img/common/logo/whatsapp.png" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">WhatsApp</span>
-							<!-- <span class="download-button__store">Google Play</span> -->
-		</a>
+							<!-- <span class="download-button__store">Google Play</span> 
+		</a> -->
 		<!-- End of Download Button 
 					</div>
 					<div class="col-lg-6 col-md-8 col-lg-offset-1">
@@ -1799,17 +1822,17 @@
 						<a class="download-button  " href="https://t.me/bestshayarihindi" target="_blank">
 							<img src="assets/img/common/logo/telegram.jpg" class="download-button__icon" alt="Platform Icon">
 							<span class="download-button__platform">Telegram</span>
-							<!-- <span class="download-button__store">App Store</span> -->
-		</a>
+							<!-- <span class="download-button__store">App Store</span> 
+		</a> -->
 		<!-- End of Download Button 
 					</div>
 					
 				</div>
 			</div>
 		</section>
-		<!--My code for download app Ends-->
+		My code for download app Ends-->
 		<!-- Section -->
-		<section class="section section--large section--no-pb " id='contacts'>
+		<section class="section  section--no-pb " id='contacts'>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
@@ -1871,9 +1894,9 @@
 										<!-- -->
 									</div>
 
-									<div class="col-md-12" style="padding: 100px;">
+									<div class="col-md-12" style="padding: 0px 100px;">
 										<div class="footer__address">
-											<p class="footer__section__title"><i class="fas fa-map-marker-alt"></i>&nbsp
+											<p class="footer__section__title"><i class="fas fa-map-marker-alt" style="color:#5F02D6;"></i>&nbsp
 												Let's Meet</p>
 											<a href="https://goo.gl/maps/GP56a7vsfhAbsxda9">
 												<p class="addressline">&nbsp&nbspG-405,Darshanam Plaza,</p>
@@ -1883,18 +1906,18 @@
 														390011</p> -->
 											</a>
 											<br />
-											<hr style="border: solid #23034C;">
+											<hr style="border: solid #23034C;"><br><br><br>
 											<p class="addressline">
-												<i class="fas fa-phone-alt"></i><a href="tel:+919924455528">&nbspCall Us
+												<i class="fas fa-phone-alt" style="color:#5F02D6;"></i><a href="tel:+919924455528">&nbspCall Us
 													: </a>
 											</p>
 											<p class="addressline">
 												<!-- <i class="fas fa-phone-alt"></i> -->
 												<a href="tel:+91 7043507789">&nbsp&nbsp+91 7043507789 </a>
-											</p>
-											<hr style="border: solid #23034C;">
+											</p><br><br><br>
+											<hr style="border: solid #23034C;"><br><br>
 											<p class="addressline">
-												<i class="fas fa-envelope"></i>
+												<i class="fas fa-envelope" style="color:#5F02D6;"></i>
 												<a href="#">&nbsp&nbspDrop us a email :
 												</a>
 											</p>
@@ -1914,18 +1937,18 @@
 				</div>
 			</div>
 			<!-- Map -->
-			<!-- <div class="map  " id="map" data-lon="40.799645" data-lat="-73.952437"> </div> -->
-			<div class="map" id="map">
+			<!-- <div class="map  " id="map" data-lon="73.21946337549214" data-lat="22.270375905481462"> </div> -->
+			<div class="map">
 				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14769.31316123375!2d73.20788697914324!3d22.265550765464543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395fc5af7df7f9fb%3A0xad64e5ffc0043efa!2sDarshanam%20Plaza!5e0!3m2!1sen!2sin!4v1656656667437!5m2!1sen!2sin"
-					width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3692.2552020326157!2d73.2187338146809!3d22.268320685340132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395fc5af7df7f9fb%3A0xad64e5ffc0043efa!2sDarshanam%20Plaza!5e0!3m2!1sen!2sin!4v1656832865801!5m2!1sen!2sin"
+					width="100%" height="465px" style="border:0;" allowfullscreen="" loading="lazy"
 					referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
-			<!-- End of Map -->
+			<!-- End of Map 22.270375905481462, 73.21946337549214 -->
 		</section>
 		<!-- End of Section -->
 		<!-- Footer -->
-		<footer class="footer"">
+		<footer class="footer">
 			<a href=" #" class="footer__scroll-top js-scroll-top">
 			<i class="fontello-level-up footer__scroll-icon"></i>
 			</a>
@@ -1952,7 +1975,7 @@
 								<li class="link-list__item">
 									<a style="color: #ffff;">Explore</a>
 								</li>
-								<hr>
+								<hr style="width: 55px; position: absolute; left: 8px;  border: solid #ffff"><br><br>
 								<li class="link-list__item">
 									<a href="#" class="link-list__link">Home</a>
 								</li>
@@ -1976,7 +1999,7 @@
 								<li class="link-list__item">
 									<a style="color: #ffff;">Legal</a>
 								</li>
-								<hr>
+								<hr style="width: 55px; position: absolute; left: 8px;  border: solid #ffff"><br><br>
 								<li class="link-list__item">
 									<a href="#" class="link-list__link">Privacy Policy</a>
 								</li>
