--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 							<img src="assets/img/common/logo/PLAYSTORE.png" class="download-button__icon"
 								alt="Platform Icon">
 							<span class="download-button__platform"
-								style="padding-top:12px;text-align:center;">Telegram</span>
+								style="padding-top:12px;text-align:center;">Playstore</span>
 							<!-- <span class="download-button__store">App Store</span> -->
 						</a>
 						<!-- End of Download Button -->
