--- a/index.html
+++ b/index.html
@@ -1032,14 +1032,17 @@
                 <p class="section-subtitle section-subtitle--center" style="color:#23034C;"><b> Testimonial</b> </p>
 				<h2 class="section-title section-title--center ">
 					<span class='section-title__highlight'>What Our User's Say About Us</span>
-				</h2>s
+				</h2>
 
                 <div class="home-course-slider owl-carousel owl-theme">
                     <div class="single-home-special-course">
-                        <div class="course-img course-content">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>15+ Categories</h2>
+                        <div class="course-img course-content ">
+							<!-- <div class="test-img course-img"></div> -->
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+                            <div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>Interface of this app is really good and easy. I personally liked it very much.</p>
+								<h4 style="text-align: right;">Shreedeep Rathwa</h4>
+								<h4 style="text-align:right ;">Planning Enginner</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1050,23 +1053,11 @@
 
                     <div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>5+ Regional Language</h2>
-                                <!-- <p>
-                                    This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
-                                </p> -->
-                                <!-- <a href="single-class.html" class="box-btn">Read More</a> -->
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="single-home-special-course">
-                        <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Free Library</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+                            <div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>I love this app, they are providing me content in video as a well as text and photo format.</p>
+								<h4 style="text-align: right;">Sonali Das</h4>
+								<h4 style="text-align:right ;">Deputy General Manager</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1078,9 +1069,27 @@
 
                     <div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Related your daily mood</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+                            <div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>With Shayar. I don't have to spend on browser.App has an algo that shows shayari acc to my mood.</p>
+								<h4 style="text-align: right;">Utkarsh Mishra</h4>
+								<h4 style="text-align:right ;">MBBS</h4>
+                                <!-- <p>
+                                    This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
+                                </p> -->
+                                <!-- <a href="single-class.html" class="box-btn">Read More</a> -->
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="single-home-special-course">
+                        <div class="course-img">
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+							<div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>This is teh best app. i tried this app and loved it. This app is made in India so urge you to SHAYAR</p>
+								<h4 style="text-align: right;">Harshita Dwivedi</h4>
+								<h4 style="text-align:right ;">Front end designer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1091,9 +1100,11 @@
                     </div>
                     <div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Shayari's in video, Text or Images</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+							<div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>I can get all types of shayari like sad, romantic, love, attitude and others. Strongly recommend</p>
+								<h4 style="text-align: right;">Tanya Das</h4>
+								<h4 style="text-align:right ;">Web Designer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1104,9 +1115,11 @@
                     </div>
                     <div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Videos in 8s to 60s</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+							<div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>It's an awesome app for love shayari. Great app. Must download and use Shayar.</p>
+								<h4 style="text-align: right;">Krishna Parekh</h4>
+								<h4 style="text-align:right ;">Android Developer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1117,9 +1130,11 @@
                     </div>
 					<div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Easy To Use</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+                            <div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>It's an awesome app for love shayari. Great app. Must download and use Shayar.</p>
+								<h4 style="text-align: right;">Krishna Parekh</h4>
+								<h4 style="text-align:right ;">Android Developer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1130,9 +1145,11 @@
                     </div>
 					<div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Follow Top Shayari's</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+                            <div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>It's an awesome app for love shayari. Great app. Must download and use Shayar.</p>
+								<h4 style="text-align: right;">Krishna Parekh</h4>
+								<h4 style="text-align:right ;">Android Developer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1143,9 +1160,11 @@
                     </div>
 					<div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Participate in Battle</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+							<div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>It's an awesome app for love shayari. Great app. Must download and use Shayar.</p>
+								<h4 style="text-align: right;">Krishna Parekh</h4>
+								<h4 style="text-align:right ;">Android Developer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1156,9 +1175,11 @@
                     </div>
 					<div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Easy Earn</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+                            <div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>It's an awesome app for love shayari. Great app. Must download and use Shayar.</p>
+								<h4 style="text-align: right;">Krishna Parekh</h4>
+								<h4 style="text-align:right ;">Android Developer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1169,9 +1190,11 @@
                     </div>
 					<div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Update Profile</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+							<div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>It's an awesome app for love shayari. Great app. Must download and use Shayar.</p>
+								<h4 style="text-align: right;">Krishna Parekh</h4>
+								<h4 style="text-align:right ;">Android Developer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
@@ -1182,9 +1205,11 @@
                     </div>
 					<div class="single-home-special-course">
                         <div class="course-img">
-                            <img src="assets/img/common/person/p5.jpg" alt="course" />
-                            <div class="course-content">
-                                <h2>Social Community of Shayar</h2>
+                            <img src="assets/img/common/backgrounds/BlueBG_1.png" alt="course" />
+                            <div class="" style="position:absolute; top: 20%;left: 15%; color:#ffff ;">
+                                <p>It's an awesome app for love shayari. Great app. Must download and use Shayar.</p>
+								<h4 style="text-align: right;">Krishna Parekh</h4>
+								<h4 style="text-align:right ;">Android Developer</h4>
                                 <!-- <p>
                                     This course focuses on building concrete basis for the student wanting to pursue engineering in their further studies.
                                 </p> -->
