--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 		</header>
 		<!-- End of Header -->
 		<!-- Hero -->
-		<div class="hero ">
+		<div class="hero" id="slide">
 			<!-- Slider -->
 			<div class="slider js-slider owl-carousel">
 				<div class="slider__slide">
@@ -323,7 +323,7 @@
 		</div>
 		<!-- End of Hero -->
 		<!-- Section -->
-		<section class="section section--grey " id='download'>
+		<section class="section section--grey " id='shayar'>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-24">
@@ -396,9 +396,9 @@
 		</section>
 		<!-- End of Section -->
 		<!-- Section -->
-		<section class="section section--skin-1 " id=''>
+		<section class="section section--skin-1 " >
 			<div class="container">
-				<div class="row">
+				<div class="row" id='plateform'>
 					<div class="col-lg-12 col-md-12">
 						<!-- Push -->
 						<div class="push push--60  "> </div>
@@ -1321,23 +1321,23 @@
 				<div class="carousel__outer">
 					<div class="carousel__inner js-carousel owl-carousel">
 						<div class="carousel__slide">
-							<img src="assets/img/common/screenshots/EDIT PROFILE.png" class="carousel__image"
+							<img src="assets/img/common/screenshots/LOGIN.png" class="carousel__image"
 								alt="Carousel Slide Image">
 							<h3 class="carousel__title"> Easy Login
 							</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="assets/img/common/screenshots/LOGIN.png" class="carousel__image"
+							<img src="assets/img/common/screenshots/EDIT PROFILE.png" class="carousel__image"
 								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Change your look</h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="assets/img/common/screenshots/PHOTO POST.png" class="carousel__image"
+							<img src="assets/img/common/screenshots/SHARE.png" class="carousel__image"
 								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Share with your loved ones </h3>
 						</div>
 						<div class="carousel__slide">
-							<img src="assets/img/common/screenshots/SHARE.png" class="carousel__image"
+							<img src="assets/img/common/screenshots/PHOTO POST.png" class="carousel__image"
 								alt="Carousel Slide Image">
 							<h3 class="carousel__title">All your Shayari’s at one place</h3>
 						</div>
@@ -1346,7 +1346,7 @@
 								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Beautify your writing</h3>
 						</div> -->
-						<!-- <div class="carousel__slide">
+						<!-- <div class="">
 							<img src="assets/img/common/screenshots/EDIT PROFILE.png" class="carousel__image"
 								alt="Carousel Slide Image">
 							<h3 class="carousel__title">Player</h3>
@@ -2205,18 +2205,18 @@
 								<li class="link-list__item">
 									<a style="color: #ffff;">Explore</a>
 								</li>
-								<hr style="width: 55px; position: absolute; left: 8px;  border: solid #ffff"><br><br>
+								<hr style="width: 55px; position: absolute; left: 8px; color:white;"><br><br>
 								<li class="link-list__item">
-									<a href="#" class="link-list__link">Home</a>
+									<a href="#slide" class="link-list__link">Home</a>
 								</li>
 								<li class="link-list__item">
-									<a href="#" class="link-list__link">Features</a>
+									<a href="#features" class="link-list__link">Features</a>
 								</li>
 								<li class="link-list__item">
-									<a href="#" class="link-list__link">Join Us</a>
+									<a href="#shayar" class="link-list__link">Join Us</a>
 								</li>
 								<li class="link-list__item">
-									<a href="#" class="link-list__link">About Us</a>
+									<a href="#plateform" class="link-list__link">About Us</a>
 								</li>
 							</ul>
 						</nav>
@@ -2229,7 +2229,7 @@
 								<li class="link-list__item">
 									<a style="color: #ffff;">Legal</a>
 								</li>
-								<hr style="width: 55px; position: absolute; left: 8px;  border: solid #ffff"><br><br>
+								<hr style="width: 55px; position: absolute; left: 8px;color: #ffff;"><br><br>
 								<li class="link-list__item">
 									<a href="#" class="link-list__link">Privacy Policy</a>
 								</li>
