--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@
 						<span class='slider__highlight'>know your current mood</span> and scroll relatable shayari’s
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/LOGIN PAGE.png" class="slider__secondary" alt="Slider Image">
+						<img src="assets/img/common/slider/LOGIN PAGE (1).png" class="slider__secondary" alt="Slider Image">
 						<img src="assets/img/common/slider/SPLASH SCREEN (1).png"
 							class="slider__secondary slider__secondary--right" alt="Slider Image">
-						<img src="assets/img/common/slider/MOOD PAGE.png" class="slider__image" alt="Slider Image">
+						<img src="assets/img/common/slider/MOOD PAGE (1).png" class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 				<div class="slider__slide">
@@ -299,11 +299,11 @@
 						</span> and follow your favourite shayari creators
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/SEARCH USER ACCOUNT.png" class="slider__secondary"
+						<img src="assets/img/common/slider/SEARCH USER ACCOUNT (1).png" class="slider__secondary"
 							alt="Slider Image">
 						<img src="assets/img/common/slider/DISCOVER MAIN PAGE.png"
 							class="slider__secondary slider__secondary--right" alt="Slider Image">
-						<img src="assets/img/common/slider/SHOW ALL VIDEO (1).png" class="slider__image"
+						<img src="assets/img/common/slider/SHOW ALL VIDEO (2).png" class="slider__image"
 							alt="Slider Image">
 					</div>
 				</div>
@@ -312,10 +312,10 @@
 						<span class='slider__highlight'>Shayari’s in Video</span>, Image and Text format
 					</h2>
 					<div class="slider__content">
-						<img src="assets/img/common/slider/HOME IMAGE.png" class="slider__secondary" alt="Slider Image">
+						<img src="assets/img/common/slider/HOME IMAGE (1).png" class="slider__secondary" alt="Slider Image">
 						<img src="assets/img/common/slider/HOME VIDEO (1).png"
 							class="slider__secondary slider__secondary--right" alt="Slider Image">
-						<img src="assets/img/common/slider/HOME TEXT.png" class="slider__image" alt="Slider Image">
+						<img src="assets/img/common/slider/HOME TEXT (1).png" class="slider__image" alt="Slider Image">
 					</div>
 				</div>
 			</div>
