--- a/index.html
+++ b/index.html
@@ -2231,13 +2231,13 @@
 								</li>
 								<hr style="width: 55px; position: absolute; left: 8px;color: #ffff;"><br><br>
 								<li class="link-list__item">
-									<a href="#" class="link-list__link">Privacy Policy</a>
+									<a href="legal/privacypolicy (1).html" class="link-list__link" target="_blank">Privacy Policy</a>
 								</li>
 								<li class="link-list__item">
-									<a href="#" class="link-list__link">Terms and Conditions</a>
+									<a href="legal/terms (1).html" class="link-list__link" target="_blank">Terms and Conditions</a>
 								</li>
 								<li class="link-list__item">
-									<a href="#" class="link-list__link">Community Guidelines</a>
+									<a href="legal/guidelines (1).html" class="link-list__link" target="_blank">Community Guidelines</a>
 								</li>
 							</ul>
 						</nav>
