--- a/legal/privacypolicy (1).html
+++ b/legal/privacypolicy (1).html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy policy</title>
-    <style>
+    <link rel="stylesheet" href="css.css">
+    <!-- <style>
         *{
             box-sizing: border-box;
             margin: 0;
@@ -28,11 +29,11 @@
         }
     
 
-    </style>
+    </style> -->
 </head>
 <body>
-    <div class="container">
-   <center> <h1>Privacy Policy</h1> <br> </center>
+    <div class="container ">
+   <center> <h1 class="title" >Privacy Policy</h1> <br> </center>
   <center>  <br> <hr width="500px">  <br> </center>
     <p>Shayar Community Private Limited built the Shayar app as a Free app. This SERVICE is provided by Shayar Community Private Limited at no cost and is intended for use as is.
         This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
