--- a/legal/privacypolicy (1).html
+++ b/legal/privacypolicy (1).html
@@ -32,7 +32,7 @@
     </style> -->
 </head>
 <body>
-    <div class="container ">
+    <div>
    <center> <h1 class="title" >Privacy Policy</h1> <br> </center>
   <center>  <br> <hr width="500px">  <br> </center>
     <p>Shayar Community Private Limited built the Shayar app as a Free app. This SERVICE is provided by Shayar Community Private Limited at no cost and is intended for use as is.
