--- a/legal/privacypolicy (1).html
+++ b/legal/privacypolicy (1).html
@@ -33,8 +33,8 @@
 </head>
 <body>
     <div>
-   <center> <h1 class="title" >Privacy Policy</h1> <br> </center>
-  <center>  <br> <hr width="500px">  <br> </center>
+   <center> <h1 class="title" >Privacy Policy</h1> </center>
+  <center><hr width="300px"></center><br>
     <p>Shayar Community Private Limited built the Shayar app as a Free app. This SERVICE is provided by Shayar Community Private Limited at no cost and is intended for use as is.
         This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
         If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. Please take a moment to familiarize yourself with our privacy practices. If you do not agree with this policy, you should not use the Platform. By using the Platform or related services, you signify your assent to this Privacy Policy. <br><br>
